2002-05-30  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/bugs/melisma-tie-rest.ly: New file.

2002-05-30  Han-Wen  <hanwen@cs.uu.nl>

	* lily/stem.cc (calc_stem_info): remove min_y member, rename
	stuff. 	Remove kneeing stuff.

	* lily/beam.cc (brew_molecule): remove beam direction. Lots of
	twiddling

2002-05-29  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/sketch.scm: 
	* scm/ps.scm: 
	* scm/pdftex.scm: 
	* scm/pdf.scm: 
	* scm/tex.scm: Add check for Guile-1.4.1.  Guile includes
	patch-level of version in minor-version string.  Arg.

2002-05-29  Han-Wen  <hanwen@cs.uu.nl>

	* ly/engraver-init.ly (TabStaffContext): 
	enable TabStaff by default.

	*  Tablature support by Jean-Baptiste Lamy <jiba@@tuxfamily.org>

2002-05-28  Jan Nieuwenhuizen  <janneke@gnu.org>

	* config.hh.in: Remove duplicate DIR_DATADIR entry.

	* aclocal.m4: Regenerate.
	
	* stepmake/aclocal.m4: Append $FULL_VERSION to datadir.

2002-05-25  Heikki Junes  <heikki.junes@hut.fi>

	* lilypond-mode.el: Added Deutsch notes and fixed "Quick notes".

	* lilypond-mode.el: Write notes with fewer keystrokes trough a 
	"Quick notes"-interface.

2002-05-26  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/regression/non-empty-text.ly: Update example with outdated
	comment.

2002-05-25  Han-Wen  <hanwen@cs.uu.nl>

	* scripts/convert-ly.py:  add textNonEmpty rule

	* lily/text-engraver.cc (create_grobs): remove textNonEmpty

2002-05-24  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/text-item.cc (markup_text2molecule): Junk ugly lookahead by
	using translate-robust add_molecule instead of add_at_edge.
	Bugfix for #(lines (finger "" "1")).

2002-05-24  Han-Wen  <hanwen@cs.uu.nl>

	* lily/stem-tremolo.cc (brew_molecule): clean up and fix stem
	tremolo placement.

2002-05-22  Han-Wen  <hanwen@cs.uu.nl>

	* VERSION: 1.5.58
 	
	* Documentation/user/refman.itely: Bugfix: add node Repeats and
	MIDI.  Regenerate menu.  Fix @end example.

	* lily/accidental.cc: Add cautionary-style to interface.
