@@ -1,5 +1,8 @@
 2002-05-30  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* lily/stem.cc (calc_stem_info): Take multiplicity into account
+	for shortest_y too.
+
 	* input/bugs/melisma-tie-rest.ly: New file.
 
 2002-05-30  Han-Wen  <hanwen@cs.uu.nl>
